--- a/src/app/shared/components/play-list-body/play-list-body.component.html
+++ b/src/app/shared/components/play-list-body/play-list-body.component.html
@@ -1,16 +1,16 @@
 <div class="play-list-body">
     <ul class="play-list-table-header">
-        <li>Titulo</li>
-        <li>álbum</li>
+        <li (click)="changeSort('name')">Titulo</li>
+        <li (click)="changeSort('album')">álbum</li>
         <li>fecha incorporación </li>
         <li><i class="uil uil-clock-eight"></i></li>
     </ul>
-    <ul class="play-list-rows" *ngFor="let item of tracks">
+    <ul class="play-list-rows" *ngFor="let item of tracks |orderList:optionSort.property:optionSort.order">
         <li class="track-name">
             <ng-container *ngTemplateOutlet="coverSection;context:{track:item}"></ng-container>
         </li>
         <li class="track-name-opacity">
-            {{item.album}}
+           🎵 {{item.album}}
         </li>
         <li class="track-name-opacity">
             {{item.album}}
