--- a/src/app/modules/tracks/pages/tracks-page/tracks-page.component.html
+++ b/src/app/modules/tracks/pages/tracks-page/tracks-page.component.html
@@ -1,6 +1,6 @@
 <div class="tracks-page">
     <!-- section top    -->
-     <app-section-generic [dataTracks]="mockTrackList" mode="small" [title]="'La mejor musica del mundo'"> </app-section-generic> 
+     <app-section-generic [dataTracks]="tracksTrending" mode="small" [title]="'La mejor musica del mundo'"> </app-section-generic> 
      <!-- section medium    -->
-      <app-section-generic [dataTracks]="mockTrackList" mode="big" [title]="'Lo mejor de electronica'"> </app-section-generic>
+      <app-section-generic [dataTracks]="tracksRandom" mode="big" [title]="'Lo mejor de electronica'"> </app-section-generic>
 </div>  
