--- a/src/app/shared/components/card-player/card-player.component.html
+++ b/src/app/shared/components/card-player/card-player.component.html
@@ -20,7 +20,7 @@
         {{track.name}}
     </div>
     <div class="buttons-player">
-        <button *ngIf="true" class="play-btn">
+        <button clic (click)="sendPlay(track)" *ngIf="true" class="play-btn">
             <i class="uil " [ngClass]="{'uil-play':true}"></i>
         </button>
         <button *ngIf="false" class="play-btn">
